crates/ty_python_semantic/resources/mdtest/snapshots/legacy_typevars.md_-_Legacy_typevar_creat…_-_Must_not_be_redefine…_(b1be57970f924722).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: legacy_typevars.md - Legacy typevar creation diagnostics - Must not be redefined
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/legacy_typevars.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing import TypeVar
2 | 
3 | T = TypeVar("T")
4 | 
5 | # error: [invalid-legacy-type-variable]
6 | T = TypeVar("T")
```

# Diagnostics

```
error[invalid-legacy-type-variable]: Cannot redefine `T` as a type variable
 --> src/mdtest_snippet.py:6:1
  |
3 | T = TypeVar("T")
  | - Previously defined here
4 |
5 | # error: [invalid-legacy-type-variable]
6 | T = TypeVar("T")
  | ^

```
